# astro-tma

./: .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
.claude/: settings.json  settings.local.json
astro-tma/: .env.example  .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
astro-tma/backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
astro-tma/backend/api/middleware/: telegram_auth.py
astro-tma/backend/api/routes/: compatibility.py  horoscope.py  natal.py  payments.py  tarot.py  users.py
astro-tma/backend/api/schemas/: compatibility.py  horoscope.py  payments.py  tarot.py  user.py
astro-tma/backend/core/: cache.py  logging.py  settings.py
astro-tma/backend/db/: database.py  models.py
astro-tma/backend/db/migrations/: env.py
astro-tma/backend/db/migrations/versions/: 001_initial_schema.py
astro-tma/backend/scripts/: seed_tarot.py
astro-tma/backend/services/astro/: compatibility.py  interpreter.py  moon.py  natal.py  transits.py
astro-tma/backend/services/payments/: stars.py
astro-tma/backend/services/tarot/: engine.py  seed_data.py
astro-tma/backend/services/users/: repository.py
astro-tma/backend/tests/: test_astro.py  test_auth.py  test_payments.py
astro-tma/frontend/: .env.example  .env.production  index.html  package.json
backend/: admin.py  main.py  pyproject.toml  requirements.txt
backend/core/: logging.py  settings.py
backend/db/: models.py
backend/scripts/: update_image_keys.py
frontend/: package-lock.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
(+91 files in other folders)
